--- a/src/Component/Header/index.css
+++ b/src/Component/Header/index.css
@@ -56,3 +56,14 @@
 .image-container{
 
 }
+
+
+@media only screen and (max-width: 600px) {
+    .text-container{
+        grid-template-columns: 55% 40%;
+        min-height: 62vh;
+    }
+    img{
+        width: 150px;
+    }
+}
