--- a/src/Component/BlogsCard/index.css
+++ b/src/Component/BlogsCard/index.css
@@ -1,6 +1,10 @@
 .blogs-Container{
     background-color: #121514;
-    text-align: center
+    text-align: center;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%),url('../../assets/bg.jpg');
+      background-position: center; /* Center the image */
+      background-repeat: no-repeat; /* Do not repeat the image */
+      background-size: cover;
 }
 .blogs-header{
     color: white;
@@ -9,7 +13,7 @@
     letter-spacing: 1.2rem;
 }
 .card{
-    margin:0px auto;
+    margin:20px auto;
     background-color: white;
     width:55%;
     height: 30vh;
@@ -18,10 +22,11 @@
     display: grid;
     grid-template-columns: 30% 70%;
     overflow: hidden;
-    box-shadow: 5px 5px 8px #ff6a3d;
+    box-shadow: 5px 5px 8px #d0afa6;
+   
 }
 .blog-subject{
-    background-color: #ff6a3d;
+    background-color: #8c827f;
     color: white;
     justify-content: center;
   align-items: center;
@@ -48,6 +53,7 @@
     font-size: 1.2rem; 
     margin-top:5px;
 }
+
 @media only screen and (max-width: 600px) {
     .card{
      
