--- a/src/Component/Header/index.css
+++ b/src/Component/Header/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Coda+Caption:wght@800&family=Freckle+Face&family=Great+Vibes&family=Monoton&family=Pacifico&family=Righteous&display=swap');
 .header-container{
     background: linear-gradient(
         rgba(7, 7, 8, 0.9), 
@@ -9,6 +10,7 @@
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover;
   position: relative;
+  background-attachment: fixed;
 }
 .header-container:hover{
     background: linear-gradient(
@@ -56,8 +58,60 @@
 .button-container{
     text-align: right;
 }
+.btn{
+    padding: 10px;
+    margin: 5px;
+    background-color: transparent;
+    color: #FF6A3D;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    transition: 0.5s ease-in;
+    border-radius: 5px;
+    font-size: 1rem;
+    animation: transitionin 1s;
+}
+.btn:hover{
+    background-color: #FF6A3D;
+    color: white;
+}
 
+@keyframes transitionin{
+    0% {
+        opacity: 1;
+     
+    }
+    50%{
+        opacity: 0;
+       
+    }
+    100%{
+        opacity: 1;
+    }
+}
 
+.changeFont{
+    animation: animateFont 5s linear infinite;
+}
+
+.circle{
+
+    width: 210px;
+
+}
+.circle:before{
+    content:'';
+    position: absolute;
+    
+    width: 201px;
+    height: 201px;
+    border-radius: 50%;
+    box-shadow: 0 0 50px #0f0,
+                inset 0 0 50px #0f0;
+ 
+    animation: animate 5s linear infinite;
+
+}
 @media only screen and (max-width: 600px) {
     .text-container{
         grid-template-columns: 55% 40%;
@@ -66,4 +120,88 @@
     img{
         width: 150px;
     }
+    .circle{
+        width: 150px;
+    }
+    .circle:before{  
+        width: 150px;
+        height: 150px;
+    }
+}
+
+
+@keyframes animate{
+    0%{
+        box-shadow: 0 0 50px #0f0,
+                    inset 0 0 50px #0f0;
+        filter: hue-rotate(0deg);
+    }
+    20%{
+        box-shadow: 0 0 60px #0f0,
+                    inset 0 0 60px #0f0;
+    
+    }
+    40%{
+        box-shadow: 0 0 40px #0f0,
+                    inset 0 0 40px #0f0;
+    
+    }
+    60%{
+        box-shadow: 0 0 80px #0f0,
+                    inset 0 0 80px #0f0;
+    
+    }
+    80%{
+        box-shadow: 0 0 100px #0f0,
+                    inset 0 0 100px #0f0;
+    
+    }
+    100%{
+        
+        box-shadow: 0 0 50px #0f0,
+                    inset 0 0 50px #0f0;
+        filter: hue-rotate(360deg);
+    }
+}
+
+
+
+@keyframes animateFont{
+    0%{
+       font-family: 'Courier New', Courier, monospace;
+    }
+    /* 10%{
+        font-family: 'Coda Caption', sans-serif;
+    
+    } */
+    20%{
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    
+    }
+    30%{
+        font-family: 'Great Vibes', cursive;
+    
+    }
+    40%{
+        font-family: 'Freckle Face', cursive;
+    
+    }
+    50%{
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    }
+    60%{
+        font-family: 'Pacifico', cursive;
+    
+    }
+    70%{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    
+    }
+    80%{
+        font-family: 'Righteous', cursive;
+    
+    }
+    /* 90%{
+        font-family: 'Monoton', cursive;
+    } */
 }
